letter spacing was fixed

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -42,7 +42,7 @@
     &--phone {
       font-size: 16px;
       line-height: 27px;
-
+      letter-spacing: 0;
       margin-bottom: 16px;
     }
 
